fixed bugs in the color circles, adjusted z-index for right hero

--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ body {
   right: 20px;
   bottom: 70px;
   font-size: var(--fs-36);
-  z-index: 3;
+  z-index: 99;
 }
 
 .arrow-down {
@@ -300,18 +300,44 @@ body {
   display: flex;
 }
 
-.circle {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: #3498db; /* Change this to your desired color */
-  transition: width 0.3s ease; /* Add a transition effect */
+.circle-container {
+  align-items: center;
+  background-color: #3498db;
+  border-radius: 20px;
   cursor: pointer;
-  z-index: 3;
+  display: flex;
+  height: 40px;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+  transition: width 0.3s ease-in-out, background-color 0.3s ease;
+  width: 40px;
+}
+.circle-container:not(:last-child) {
+  margin-right: 15px;
+}
+.circle-container:hover {
+  width: 95px;
+  background-color: var(--container-white);
 }
 
-.circle:hover {
-  width: 120px; /* Increase the width by 20px on hover */
+.circle-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.circle-text {
+  opacity: 0;
+  transition: opacity 1.2s ease;
+  color: var(--black);
+  text-align: center;
+}
+
+.circle-container:hover .circle-text {
+  opacity: 1;
 }
 
 :root {
@@ -467,7 +493,7 @@ footer {
 
 header {
   position: fixed;
-  z-index: 999;
+  z-index: 9999;
   width: 100vw;
 }
 
@@ -545,31 +571,28 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 700px;
+  min-width: 1200px;
   height: 100vh;
 }
 
-.left-hero {
+.right-hero {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50vw;
+  width: 40vw;
   height: 100%;
-  z-index: -1;
 }
 
-.right-hero {
+#left-hero {
   animation-duration: 1.5s;
   animation-name: slideUp;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 50vw;
+  width: 40vw;
   height: 100vh;
-  background-color: var(--black);
-  color: var(--white);
 }
 
 .hero-text-container {
