--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -36,7 +36,7 @@
   right: 20px;
   bottom: 70px;
   font-size: var(--fs-36);
-  z-index: 3;
+  z-index: 99;
 }
 
 .arrow-down {
@@ -48,20 +48,51 @@
   z-index: 99;
 }
 
+// CIRCLES //
 .color-palette-wrapper {
   display: flex;
 }
 
-.circle {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: #3498db; /* Change this to your desired color */
-  transition: width 0.3s ease; /* Add a transition effect */
+.circle-container {
+  // z-index: 3;
+  align-items: center;
+  background-color: #3498db;
+  border-radius: 20px;
   cursor: pointer;
-  z-index: 3;
+  display: flex;
+  height: 40px;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+  transition: width 0.3s ease-in-out, background-color 0.3s ease;
+  width: 40px;
+
+  &:not(:last-child) {
+    margin-right: 15px;
+  }
+
+  &:hover {
+    width: 95px;
+    background-color: var(--container-white);
+  }
 }
 
-.circle:hover {
-  width: 120px; /* Increase the width by 20px on hover */
+.circle-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.circle-text {
+  opacity: 0;
+  transition: opacity 1.2s ease;
+
+  color: var(--black);
+  text-align: center;
+}
+
+.circle-container:hover .circle-text {
+  opacity: 1;
 }
