--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 header {
   position: fixed;
-  z-index: 999;
+  z-index: 9999;
   width: 100vw;
 }
 
