--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -2,34 +2,31 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 700px; //might need to change
+  min-width: 1200px; //might need to change
   //max-width: 1350px;
   height: 100vh;
 }
 
 // LEFT SECTION //
-.left-hero {
+.right-hero {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50vw;
+  width: 40vw;
   height: 100%;
-  z-index: -1;
 }
 
 // HERO TEXT //
-.right-hero {
+#left-hero {
   animation-duration: 1.5s;
   animation-name: slideUp;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 50vw;
+  width: 40vw;
   height: 100vh;
-  background-color: var(--black);
-  color: var(--white);
 }
 
 .hero-text-container {
